# zephyrrepro

./: CMakeLists.txt  Kconfig  README.md  overlay-ot-defaults.conf  prj.common.conf  west.yml
boards/: nrf52840dk_nrf52840.overlay
modules/: modules.cmake
modules/cjson/: CMakeLists.txt  Kconfig
src/: main.c  readme.md
